# cascade-agent

./: Cargo.toml  Makefile  README.md
.hermes/plans/: 2026-04-22_remaining-work.md
.kilo/plans/: 1776891463057-crisp-planet.md
data/skills/example-skill/: SKILL.md  run.sh
src/: error.rs  main.rs
src/agent/: mod.rs
src/knowledge/: embeddings.rs  mod.rs  vectordb.rs
src/memory/: tokenizer.rs
src/orchestrator/: mod.rs
src/planning/: mod.rs  types.rs
src/tools/: mod.rs  planning_tools.rs
tests/: planning_test.rs  skill_test.rs
